Bug fixes
A_lista finally displays picture in main website. blogpage covers the whole page

--- a/tears/static/tears/css/sendeplan.css
+++ b/tears/static/tears/css/sendeplan.css
@@ -1070,3 +1070,21 @@
     letter-spacing: 0;
     line-height: 25.7px;
   }
+  .custom-scroll::-webkit-scrollbar {
+  height: 8px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background-color: #7e2d40;
+  border-radius: 4px;
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+  background-color: #eee;
+}
+
+/* Optional for Firefox */
+.custom-scroll {
+  scrollbar-color: #7e2d40 #eee;
+  scrollbar-width: thin;
+}
